@@ -1,6 +1,7 @@
 = ActiveMerchant CHANGELOG
 
 * AuthorizeNet: Map to standard AVSResult codes [shasum]
+* CitrusPay: Add 3DSecureId field [davidsantoso]
 
 == Version 1.61.0 (November 7, 2016)
 * Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
